# open-bart

./: .gitattributes  .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  paper.yml  sidecar-windows.yml
app/: .gitignore  package-lock.json  package.json  vite.config.ts
app/e2e/: verify-kiosk-macos.sh
app/sidecar/: __init__.py  __main__.py  app.py  cli.py  emission.py  hello_score.py  hub.py  hub_view.py  hub_writer.py  models.py  naming.py  provenance.py  rebuild.py  sidecar.spec  station.py  textio.py  versioned_csv.py
app/src/: App.css  App.test.tsx  App.tsx  BartGame.test.tsx  BartGame.tsx  VersionGuard.test.tsx  VersionGuard.tsx  index.css  main.tsx  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
app/src/components/: Icon.tsx  WorkspaceTabs.css  WorkspaceTabs.tsx
app/src/hub/: DataHub.css  DataHub.test.tsx  DataHub.tsx
app/src/lib/: api.test.ts  api.ts  capabilities.test.ts  config.test.ts  config.ts  contract.generated.json  contract.test.ts  desktop.test.ts  desktop.ts  hub.test.ts  hub.ts  i18n.test.ts  i18n.ts  platform.test.ts  platform.ts  session.test.ts  session.ts
app/src/run/: Debrief.test.tsx  Debrief.tsx  ReturnSurface.tsx  RunFlow.css  RunFlow.test.tsx  RunFlow.tsx  participantId.test.ts  participantId.ts  participantStyles.ts  returnSummary.test.ts  returnSummary.ts  sequence.test.ts  sequence.ts
app/src/setup/: EvPreview.css  EvPreview.test.tsx  EvPreview.tsx  StationBadge.test.tsx  StationBadge.tsx  StudySetup.css  StudySetup.test.tsx  StudySetup.tsx  evGeometry.test.ts  evGeometry.ts  familyParams.test.ts  familyParams.ts  studyForm.ts  (+5 more)
docs/: conf.py  data_outputs.md  game_client.md  hazard_families.md  index.md  installation.md  metrics_reference.md  scoring_engine.md  scripts.md  task_design.md
docs/adr/: 0001-atomic-dual-format-persistence.md  0003-dark-researcher-light-participant-theme.md  0004-persona-metrics-default-color-triad.md
docs/samples/: README.md
docs/standalone/: DESIGN.md  KIOSK.md  QUALITY-KAIZEN.md  SMARTSCREEN.md  SPEC.md  VERIFY-WINDOWS.md  multi_station.md  quickstart.md
paper/: multi-station-section.md  paper.bib  paper.md  paper.tex
scoring/: __init__.py  bart.py  projection.py  verification.py
scoring/config/: __init__.py  task_config.py
scoring/schemas/: __init__.py  game_events.py
scripts/: monte_carlo_ev.py  plot_hazard_families.py  regenerate_samples.py
tests/: test_config.py  test_docs.py  test_emission.py  test_engine_config.py  test_envelope.py  test_hub.py  test_hub_cli.py  test_hub_view.py  test_hub_writer.py  test_metric_documentation.py  test_packaging.py  test_paper.py  test_practice.py  test_projection.py  test_provenance.py  test_readme.py  test_rebuild.py  test_release.py  test_scoring.py  test_scoring_robustness.py  test_sidecar.py  test_station.py  test_ts_contract.py  test_verification.py  test_versioned_csv.py
tests/fixtures/: default_session_metrics_golden.json
tests/hub/: __init__.py  fixture_builder.py  snapshot.py  test_fixture_builder.py  test_hub_equivalence.py  test_hub_ingestion.py  test_samples_snapshot.py
(+139 files in other folders)
