[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "open-bart"
dynamic = ["version"]
description = "Dynamic Hazard Rate BART: a configurable, EV-calibrated Balloon Analogue Risk Task scoring engine and instrument."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ahmet Selim Yılmaz" }]
keywords = [
    "BART",
    "Balloon Analogue Risk Task",
    "risk-taking",
    "psychometrics",
    "behavioral-economics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.6",
]

[project.optional-dependencies]
# Used by scripts/ (Monte Carlo verification, synthetic data generation).
# scipy lives here, not in core: the engine is scipy-free so the frozen sidecar
# (SPEC §3, §18) stays small; only scripts/monte_carlo_ev.py needs it.
scripts = ["matplotlib>=3.8", "pandas>=2.2", "scipy>=1.12"]
# The offline FastAPI sidecar that wraps the scoring package (SPEC §9).
sidecar = ["fastapi>=0.110", "uvicorn>=0.29"]
# PyInstaller toolchain for freezing the sidecar into a per-OS binary (SPEC §9).
build = ["pyinstaller>=6.6"]
# Test/dev tooling. httpx backs FastAPI's TestClient; pyyaml backs the
# docs-as-contract test that parses the GitHub workflow YAML (test_paper.py).
dev = ["pytest>=7", "httpx>=0.27", "pyyaml>=6"]

[project.urls]
Homepage = "https://github.com/aslmylmz/open-bart"
Repository = "https://github.com/aslmylmz/open-bart"
Documentation = "https://open-bart.readthedocs.io"

[tool.pytest.ini_options]
filterwarnings = [
    # Third-party: FastAPI's TestClient routes through starlette+httpx, which
    # emits this deprecation on newer starlette. Not our code; keep output clean.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.setuptools.dynamic]
# Single source of truth: read the version from the package itself.
version = { attr = "scoring.__version__" }

[tool.setuptools.packages.find]
# Flat layout: ship only the scoring package (+ its subpackages), not docs/games/tests.
include = ["scoring*"]
